[gd_scene load_steps=2 format=3 uid="uid://da2fdw44wvyie"]

[ext_resource type="Script" uid="uid://ut1nu784dwdi" path="res://ui/health_bar/health_bar_ui.gd" id="1_hnbk4"]

[node name="HealthBarUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 77.0
offset_bottom = 17.0
script = ExtResource("1_hnbk4")

[node name="PipContainer" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 15.0

[node name="@ColorRect@47176" type="ColorRect" parent="PipContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 0

[node name="@ColorRect@47177" type="ColorRect" parent="PipContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 0
offset_left = 15.0
offset_right = 15.0

[node name="@ColorRect@47178" type="ColorRect" parent="PipContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 0
offset_left = 30.0
offset_right = 30.0

[node name="@ColorRect@47179" type="ColorRect" parent="PipContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 0
offset_left = 45.0
offset_right = 45.0

[node name="@ColorRect@47180" type="ColorRect" parent="PipContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 0
offset_left = 60.0
offset_right = 60.0

[node name="Frame" type="Control" parent="."]
anchors_preset = 0

[node name="FrameTop" type="ColorRect" parent="Frame"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 77.0
offset_bottom = 1.0

[node name="FrameBottom" type="ColorRect" parent="Frame"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 16.0
offset_right = 77.0
offset_bottom = 17.0

[node name="FrameRight" type="ColorRect" parent="Frame"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 76.0
offset_right = 77.0
offset_bottom = 17.0

[node name="FrameLeft" type="ColorRect" parent="Frame"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1.0
offset_bottom = 17.0
